# aquastation-backend

./: .gitignore  Cargo.toml  readme.md  refinery.toml
api_types/: Cargo.toml
api_types/src/: container.rs  dto.rs  lib.rs  probe.rs  probes_status.rs  user_management_payload.rs
back/: Cargo.toml
back/src/: main.rs
back/src/api/: error.rs  mod.rs  server.rs
back/src/api/containers/: mod.rs
back/src/api/helpers/: mod.rs
back/src/api/probes/: mod.rs
back/src/data_sources/: container.rs  probes.rs  users.rs
back/src/templates/: mod.rs
leptos-front/: Cargo.toml  index.html
leptos-front/src/: app_contexts.rs  config.rs  main.rs  main.scss
leptos-front/src/api/: auth.rs  error.rs  mod.rs  user.rs
leptos-front/src/atoms/: labeled_input.rs  labeled_select.rs  loader.rs  logger.rs  mod.rs
leptos-front/src/models/: user.rs
leptos-front/src/molecules/: containers_table.rs  logging_form.rs  menu.rs  mod.rs  protected_component.rs  request_display.rs  resource_loader.rs
leptos-front/src/pages/: logging.rs  mod.rs  not_found.rs
leptos-front/src/pages/user/: dashboard.rs  mod.rs
leptos-front/src/pages/user/containers/: create.rs  create_probes.rs  list.rs  mod.rs
leptos-front/src/styles/: button.scss  card.scss  form.scss  loader.scss  table.scss  variables.scss
migrations/: 20221211194305_initialize.sql  20230401202454_user_mamangement.sql
migrations_old/: v1_data.sql
src/: main.rs
src/api/: app_state.rs  error.rs  server.rs
src/api/containers/: mod.rs
src/api/helpers/: server_response.rs
src/api/probes/: mod.rs
src/api/users/: mod.rs
src/data_sources/: container.rs  mod.rs  probes.rs  users.rs
src/model/: container.rs  error.rs  mod.rs  probe.rs  user.rs
src/templates/: mod.rs
src/templates/emails/: base.html
src/usecases/: mod.rs
src/usecases/containers/: get.rs  list.rs
src/usecases/probes/: get.rs  list.rs
src/usecases/users/: PublicUser.rs  auth_body.rs  claims.rs  log_in.rs  mod.rs  reset_password.rs  sign_in.rs
(+19 files in other folders)
