[package]
name = "aquastation-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*", features = ["headers"] }
axum-macros = "*"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1.57"
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "postgres", "macros", "chrono" ] }
dotenv = "0.15.0"
jsonwebtoken = "8"
chrono = { version = "0.4.24", features = ["serde"] }
lettre = "0.10"
rand = "0.8.5"
tera = "1.18.1"
