[package]
name = "api_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Defines a feature named `webp` that does not enable any other features.
sqlx = ["dep:sqlx"]
iterable = ["dep:enum-iterator"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", optional = true, features = [  "runtime-async-std-native-tls", "postgres", "macros", "chrono" ] }
chrono = { version = "0.4.26", features = ["serde"] }
enum-iterator = { version = "1.4.1", optional = true }
