[package]
name = "leptos-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_types = {path="../api_types", features = ["iterable"] }
enum-iterator = "1.4.1"
gloo-storage = "0.3.0"
leptos = { version = "0.5.2", features = ["csr"] }
leptos_router = { version = "0.5.2", features = ["csr"] }
reqwest =  { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"


[profile.release]
lto = "fat"
codegen-units = 1
